--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "fast-xml-parser": "^4.2.7",
+    "nodemon": "^3.0.1",
+    "xml2js": "^0.6.2"
   }
 }
