--- a/package.json
+++ b/package.json
@@ -10,5 +10,12 @@
     "fast-xml-parser": "^4.2.7",
     "nodemon": "^3.0.1",
     "xml2js": "^0.6.2"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.17",
+    "@types/xml2js": "^0.4.12",
+    "typescript": "^5.2.2"
   }
 }
