--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/xml2js": "^0.4.12",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
+    "eslint": "^8.49.0",
     "typescript": "^5.2.2"
   }
 }
