--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
-    "start": "nodemon index.js"
+    "compile": "npx tsc",
+    "start": "npm run compile && nodemon dist/index.js",
+    "eslint-fix": "npx eslint --fix ./dtos/* routes/* services/* utils/* index.ts"
   },
   "dependencies": {
     "axios": "^1.5.0",
