--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "npx tsc && npm run eslint-fix && nodemon dist/index.js",
+    "start": "npx tsc && npm run eslint-fix && node dist/index.js",
     "eslint-fix": "npx eslint --fix ./dtos/* routes/* services/* utils/* index.ts"
   },
   "dependencies": {
@@ -18,7 +18,6 @@
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.49.0",
-    "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
   }
 }
