--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "start": "npx tsc && npm run eslint-fix && node dist/index.js",
-    "eslint-fix": "npx eslint --fix ./dtos/* routes/* services/* utils/* index.ts"
+    "start": "npx tsc && npm run eslint-fix && npx nodemon index.ts",
+    "eslint-fix": "npx eslint --fix dtos/*.ts routes/*.ts services/*.ts utils/*.ts index.ts"
   },
   "dependencies": {
     "axios": "^1.5.0",
@@ -18,6 +18,8 @@
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.49.0",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
 }
