--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/xml2js": "^0.4.12",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
