--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "scripts": {
-    "start": "npx tsc && npm run eslint-fix && npx nodemon index.ts",
-    "eslint-fix": "npx eslint --fix dtos/*.ts routes/*.ts services/*.ts utils/*.ts index.ts"
+    "eslint-fix": "npx eslint --fix dtos/*.ts routes/*.ts services/*.ts utils/*.ts index.ts",
+    "dev": "npx nodemon index.ts",
+    "start": "node dist/index.js",
+    "build": "npm run eslint-fix && npx tsc"
   },
   "dependencies": {
     "axios": "^1.5.0",
