--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.49.0",
     "nodemon": "^3.0.1",
+    "swagger-autogen": "^2.23.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
